tests/baselines/reference/callOverloads2.errors.txt
==== tests/cases/compiler/callOverloads2.ts (3 errors) ====
    
    
    class Foo {    
        bar1() { /*WScript.Echo("bar1");*/ }
    
        constructor(x: any) {
            // WScript.Echo("Constructor function has executed");
        }
    }
    
    function Foo();
             ~~~
!!! error TS2000: Duplicate identifier 'Foo'.
    
    function F1(s:string) {return s;}
             ~~
!!! error TS1043: Function overload name must be 'Foo'.
    function F1(a:any) { return a;} // error -  duplicate identifier
             ~~
!!! error TS2000: Duplicate identifier 'F1'.
    
    function Goo(s:string); // error - no implementation
    
    declare function Gar(s:String); // expect no error
    
    var f1 = new Foo("hey");
    
    
    f1.bar1();
    Foo();
    